syntax = "proto3";

package process;

option go_package = "cs425/mp/process";

// The Worker service
service WorkerService {
    rpc SetupModel (SetupModelRequest) returns (SetupModelReply) {}
}

message SetupModelRequest {
    string modelId = 1;
}

message SetupModelReply {
    bool status = 1;
}